src/libshoopdaloop/libshoopdaloop.h

// Audio driver
SHOOP_EXPORT shoop_audio_driver_t *create_audio_driver (shoop_audio_driver_type_t type);
SHOOP_EXPORT shoop_audio_driver_state_t *get_audio_driver_state (shoop_audio_driver_t *driver);
SHOOP_EXPORT unsigned driver_type_supported(shoop_audio_driver_type_t driver_type);
SHOOP_EXPORT void destroy_audio_driver (shoop_audio_driver_t *driver);
SHOOP_EXPORT void *maybe_driver_handle (shoop_audio_driver_t *driver);
SHOOP_EXPORT const char* maybe_driver_instance_name (shoop_audio_driver_t *driver);
SHOOP_EXPORT unsigned get_sample_rate (shoop_audio_driver_t *driver);
SHOOP_EXPORT unsigned get_buffer_size (shoop_audio_driver_t *driver);
SHOOP_EXPORT unsigned get_driver_active (shoop_audio_driver_t *driver);
SHOOP_EXPORT void start_dummy_driver(shoop_audio_driver_t *driver, shoop_dummy_audio_driver_settings_t settings);
SHOOP_EXPORT void start_jack_driver(shoop_audio_driver_t *driver, shoop_jack_audio_driver_settings_t settings);
SHOOP_EXPORT void wait_process(shoop_audio_driver_t *driver);
SHOOP_EXPORT shoop_external_port_descriptors_t *find_external_ports(shoop_audio_driver_t *driver, const char* maybe_name_regex, shoop_port_direction_t maybe_port_direction_filter, shoop_port_data_type_t maybe_data_type_filter);
// Test functions
SHOOP_EXPORT void do_segfault_on_process_thread(shoop_backend_session_t *backend);
SHOOP_EXPORT void do_abort_on_process_thread(shoop_backend_session_t *backend);
// Session
SHOOP_EXPORT shoop_backend_session_t *create_backend_session ();
SHOOP_EXPORT void destroy_backend_session (shoop_backend_session_t *session);
SHOOP_EXPORT shoop_backend_session_state_info_t *get_backend_session_state(shoop_backend_session_t *session);
SHOOP_EXPORT shoop_profiling_report_t* get_profiling_report(shoop_backend_session_t *session);
SHOOP_EXPORT shoop_result_t set_audio_driver(shoop_backend_session_t *session, shoop_audio_driver_t *driver);
// Loops
SHOOP_EXPORT shoopdaloop_loop_t *create_loop(shoop_backend_session_t *backend);
SHOOP_EXPORT shoopdaloop_loop_audio_channel_t *add_audio_channel (shoopdaloop_loop_t *loop, shoop_channel_mode_t mode);
SHOOP_EXPORT shoopdaloop_loop_midi_channel_t  *add_midi_channel  (shoopdaloop_loop_t *loop, shoop_channel_mode_t mode);
SHOOP_EXPORT unsigned          get_n_audio_channels     (shoopdaloop_loop_t *loop);
SHOOP_EXPORT unsigned          get_n_midi_channels      (shoopdaloop_loop_t *loop);
SHOOP_EXPORT void              clear_loop               (shoopdaloop_loop_t *loop, unsigned length);
SHOOP_EXPORT shoop_loop_state_info_t *get_loop_state          (shoopdaloop_loop_t *loop);
SHOOP_EXPORT void              set_loop_length          (shoopdaloop_loop_t *loop, unsigned length);
SHOOP_EXPORT void              set_loop_position        (shoopdaloop_loop_t *loop, unsigned position);
SHOOP_EXPORT void              set_loop_sync_source     (shoopdaloop_loop_t *loop, shoopdaloop_loop_t *sync_source);
SHOOP_EXPORT void              adopt_ringbuffer_contents(shoopdaloop_loop_t *loop, unsigned reverse_cycles_start, unsigned cycles_length);
SHOOP_EXPORT void loop_transition(shoopdaloop_loop_t *loop,
                      shoop_loop_mode_t mode,
                      unsigned delay, // In # of triggers
                      unsigned wait_for_sync);
SHOOP_EXPORT void loops_transition(unsigned int n_loops,
                      shoopdaloop_loop_t **loops,
                      shoop_loop_mode_t mode,
                      unsigned delay, // In # of triggers
                      unsigned wait_for_sync);
// Loop channels
SHOOP_EXPORT void                   clear_audio_channel      (shoopdaloop_loop_audio_channel_t *channel, unsigned length);
SHOOP_EXPORT void                   clear_midi_channel       (shoopdaloop_loop_midi_channel_t  *channel);
SHOOP_EXPORT void                   connect_audio_output     (shoopdaloop_loop_audio_channel_t *channel, shoopdaloop_audio_port_t *port);
SHOOP_EXPORT void                   connect_midi_output      (shoopdaloop_loop_midi_channel_t  *channel, shoopdaloop_midi_port_t *port);
SHOOP_EXPORT void                   connect_audio_input      (shoopdaloop_loop_audio_channel_t *channel, shoopdaloop_audio_port_t *port);
SHOOP_EXPORT void                   connect_midi_input       (shoopdaloop_loop_midi_channel_t  *channel, shoopdaloop_midi_port_t *port);
SHOOP_EXPORT void                   disconnect_audio_outputs (shoopdaloop_loop_audio_channel_t *channel);
SHOOP_EXPORT void                   disconnect_midi_outputs  (shoopdaloop_loop_midi_channel_t  *channel);
SHOOP_EXPORT void                   disconnect_audio_output  (shoopdaloop_loop_audio_channel_t *channel, shoopdaloop_audio_port_t* port);