src/rust/backend/src/codegen/libshoopdaloop.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of shoop_profiling_report_item_t"]
        [::std::mem::size_of::<shoop_profiling_report_item_t>() - 24usize];
    ["Alignment of shoop_profiling_report_item_t"]
        [::std::mem::align_of::<shoop_profiling_report_item_t>() - 8usize];
    ["Offset of field: shoop_profiling_report_item_t::key"]
        [::std::mem::offset_of!(shoop_profiling_report_item_t, key) - 0usize];
    ["Offset of field: shoop_profiling_report_item_t::n_samples"]
        [::std::mem::offset_of!(shoop_profiling_report_item_t, n_samples) - 8usize];
    ["Offset of field: shoop_profiling_report_item_t::average"]
        [::std::mem::offset_of!(shoop_profiling_report_item_t, average) - 12usize];
    ["Offset of field: shoop_profiling_report_item_t::worst"]
        [::std::mem::offset_of!(shoop_profiling_report_item_t, worst) - 16usize];
    ["Offset of field: shoop_profiling_report_item_t::most_recent"]
        [::std::mem::offset_of!(shoop_profiling_report_item_t, most_recent) - 20usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct shoop_profiling_report_t {
    pub n_items: ::std::os::raw::c_uint,
    pub items: *mut shoop_profiling_report_item_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of shoop_profiling_report_t"]
        [::std::mem::size_of::<shoop_profiling_report_t>() - 16usize];
    ["Alignment of shoop_profiling_report_t"]
        [::std::mem::align_of::<shoop_profiling_report_t>() - 8usize];
    ["Offset of field: shoop_profiling_report_t::n_items"]
        [::std::mem::offset_of!(shoop_profiling_report_t, n_items) - 0usize];
    ["Offset of field: shoop_profiling_report_t::items"]
        [::std::mem::offset_of!(shoop_profiling_report_t, items) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct shoop_port_maybe_connection_t {
    pub name: *const ::std::os::raw::c_char,
    pub connected: ::std::os::raw::c_uint,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of shoop_port_maybe_connection_t"]
        [::std::mem::size_of::<shoop_port_maybe_connection_t>() - 16usize];
    ["Alignment of shoop_port_maybe_connection_t"]
        [::std::mem::align_of::<shoop_port_maybe_connection_t>() - 8usize];
    ["Offset of field: shoop_port_maybe_connection_t::name"]
        [::std::mem::offset_of!(shoop_port_maybe_connection_t, name) - 0usize];
    ["Offset of field: shoop_port_maybe_connection_t::connected"]
        [::std::mem::offset_of!(shoop_port_maybe_connection_t, connected) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct shoop_port_connections_state_t {
    pub n_ports: ::std::os::raw::c_uint,
    pub ports: *mut shoop_port_maybe_connection_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of shoop_port_connections_state_t"]
        [::std::mem::size_of::<shoop_port_connections_state_t>() - 16usize];
    ["Alignment of shoop_port_connections_state_t"]
        [::std::mem::align_of::<shoop_port_connections_state_t>() - 8usize];
    ["Offset of field: shoop_port_connections_state_t::n_ports"]
        [::std::mem::offset_of!(shoop_port_connections_state_t, n_ports) - 0usize];
    ["Offset of field: shoop_port_connections_state_t::ports"]
        [::std::mem::offset_of!(shoop_port_connections_state_t, ports) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct shoop_multichannel_audio_t {
    pub n_channels: ::std::os::raw::c_uint,
    pub n_frames: ::std::os::raw::c_uint,
    pub data: *mut audio_sample_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of shoop_multichannel_audio_t"]
        [::std::mem::size_of::<shoop_multichannel_audio_t>() - 16usize];
    ["Alignment of shoop_multichannel_audio_t"]
        [::std::mem::align_of::<shoop_multichannel_audio_t>() - 8usize];
    ["Offset of field: shoop_multichannel_audio_t::n_channels"]
        [::std::mem::offset_of!(shoop_multichannel_audio_t, n_channels) - 0usize];
    ["Offset of field: shoop_multichannel_audio_t::n_frames"]
        [::std::mem::offset_of!(shoop_multichannel_audio_t, n_frames) - 4usize];
    ["Offset of field: shoop_multichannel_audio_t::data"]
        [::std::mem::offset_of!(shoop_multichannel_audio_t, data) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct shoop_external_port_descriptor_t {
    pub data_type: shoop_port_data_type_t,
    pub direction: shoop_port_direction_t,
    pub name: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of shoop_external_port_descriptor_t"]
        [::std::mem::size_of::<shoop_external_port_descriptor_t>() - 16usize];
    ["Alignment of shoop_external_port_descriptor_t"]
        [::std::mem::align_of::<shoop_external_port_descriptor_t>() - 8usize];
    ["Offset of field: shoop_external_port_descriptor_t::data_type"]
        [::std::mem::offset_of!(shoop_external_port_descriptor_t, data_type) - 0usize];
    ["Offset of field: shoop_external_port_descriptor_t::direction"]
        [::std::mem::offset_of!(shoop_external_port_descriptor_t, direction) - 4usize];
    ["Offset of field: shoop_external_port_descriptor_t::name"]
        [::std::mem::offset_of!(shoop_external_port_descriptor_t, name) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct shoop_external_port_descriptors_t {
    pub n_ports: ::std::os::raw::c_uint,
    pub ports: *mut shoop_external_port_descriptor_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of shoop_external_port_descriptors_t"]
        [::std::mem::size_of::<shoop_external_port_descriptors_t>() - 16usize];
    ["Alignment of shoop_external_port_descriptors_t"]
        [::std::mem::align_of::<shoop_external_port_descriptors_t>() - 8usize];
    ["Offset of field: shoop_external_port_descriptors_t::n_ports"]
        [::std::mem::offset_of!(shoop_external_port_descriptors_t, n_ports) - 0usize];
    ["Offset of field: shoop_external_port_descriptors_t::ports"]
        [::std::mem::offset_of!(shoop_external_port_descriptors_t, ports) - 8usize];
};
extern "C" {
    pub fn create_audio_driver(type_: shoop_audio_driver_type_t) -> *mut shoop_audio_driver_t;
}
extern "C" {
    pub fn get_audio_driver_state(
        driver: *mut shoop_audio_driver_t,
    ) -> *mut shoop_audio_driver_state_t;
}
extern "C" {
    pub fn driver_type_supported(driver_type: shoop_audio_driver_type_t) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn destroy_audio_driver(driver: *mut shoop_audio_driver_t);
}
extern "C" {
    pub fn maybe_driver_handle(driver: *mut shoop_audio_driver_t) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn maybe_driver_instance_name(
        driver: *mut shoop_audio_driver_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_sample_rate(driver: *mut shoop_audio_driver_t) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn get_buffer_size(driver: *mut shoop_audio_driver_t) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn get_driver_active(driver: *mut shoop_audio_driver_t) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn start_dummy_driver(
        driver: *mut shoop_audio_driver_t,
        settings: shoop_dummy_audio_driver_settings_t,
    );
}
extern "C" {
    pub fn start_jack_driver(
        driver: *mut shoop_audio_driver_t,
        settings: shoop_jack_audio_driver_settings_t,
    );
}
extern "C" {
    pub fn wait_process(driver: *mut shoop_audio_driver_t);
}
extern "C" {
    pub fn find_external_ports(
        driver: *mut shoop_audio_driver_t,
        maybe_name_regex: *const ::std::os::raw::c_char,
        maybe_port_direction_filter: shoop_port_direction_t,
        maybe_data_type_filter: shoop_port_data_type_t,
    ) -> *mut shoop_external_port_descriptors_t;
}
extern "C" {
    pub fn do_segfault_on_process_thread(backend: *mut shoop_backend_session_t);
}
extern "C" {
    pub fn do_abort_on_process_thread(backend: *mut shoop_backend_session_t);
}
extern "C" {
    pub fn create_backend_session() -> *mut shoop_backend_session_t;
}
extern "C" {
    pub fn destroy_backend_session(session: *mut shoop_backend_session_t);
}
extern "C" {
    pub fn get_backend_session_state(
        session: *mut shoop_backend_session_t,
    ) -> *mut shoop_backend_session_state_info_t;
}
extern "C" {
    pub fn get_profiling_report(
        session: *mut shoop_backend_session_t,
    ) -> *mut shoop_profiling_report_t;
}
extern "C" {
    pub fn set_audio_driver(
        session: *mut shoop_backend_session_t,
        driver: *mut shoop_audio_driver_t,
    ) -> shoop_result_t;
}
extern "C" {
    pub fn create_loop(backend: *mut shoop_backend_session_t) -> *mut shoopdaloop_loop_t;
}
extern "C" {
    pub fn add_audio_channel(
        loop_: *mut shoopdaloop_loop_t,
        mode: shoop_channel_mode_t,
    ) -> *mut shoopdaloop_loop_audio_channel_t;
}
extern "C" {
    pub fn add_midi_channel(
        loop_: *mut shoopdaloop_loop_t,
        mode: shoop_channel_mode_t,
    ) -> *mut shoopdaloop_loop_midi_channel_t;
}
extern "C" {
    pub fn get_n_audio_channels(loop_: *mut shoopdaloop_loop_t) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn get_n_midi_channels(loop_: *mut shoopdaloop_loop_t) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn clear_loop(loop_: *mut shoopdaloop_loop_t, length: ::std::os::raw::c_uint);
}
extern "C" {
    pub fn get_loop_state(loop_: *mut shoopdaloop_loop_t) -> *mut shoop_loop_state_info_t;
}
extern "C" {
    pub fn set_loop_length(loop_: *mut shoopdaloop_loop_t, length: ::std::os::raw::c_uint);
}
extern "C" {
    pub fn set_loop_position(loop_: *mut shoopdaloop_loop_t, position: ::std::os::raw::c_uint);
}
extern "C" {
    pub fn set_loop_sync_source(
        loop_: *mut shoopdaloop_loop_t,
        sync_source: *mut shoopdaloop_loop_t,
    );
}
extern "C" {
    pub fn adopt_ringbuffer_contents(
        loop_: *mut shoopdaloop_loop_t,
        reverse_cycles_start: ::std::os::raw::c_int,
        cycles_length: ::std::os::raw::c_int,
        go_to_cycle: ::std::os::raw::c_int,
        go_to_mode: shoop_loop_mode_t,
    );
}
extern "C" {
    pub fn loop_transition(
        loop_: *mut shoopdaloop_loop_t,
        mode: shoop_loop_mode_t,
        maybe_delay: ::std::os::raw::c_int,
        maybe_to_sync_at_cycle: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn loops_transition(
        n_loops: ::std::os::raw::c_uint,
        loops: *mut *mut shoopdaloop_loop_t,
        mode: shoop_loop_mode_t,
        maybe_delay: ::std::os::raw::c_int,
        maybe_to_sync_at_cycle: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn clear_audio_channel(
        channel: *mut shoopdaloop_loop_audio_channel_t,
        length: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn clear_midi_channel(channel: *mut shoopdaloop_loop_midi_channel_t);
}
extern "C" {
    pub fn connect_audio_output(
        channel: *mut shoopdaloop_loop_audio_channel_t,
        port: *mut shoopdaloop_audio_port_t,
    );
}
extern "C" {
    pub fn connect_midi_output(
        channel: *mut shoopdaloop_loop_midi_channel_t,
        port: *mut shoopdaloop_midi_port_t,
    );
}
extern "C" {
    pub fn connect_audio_input(
        channel: *mut shoopdaloop_loop_audio_channel_t,
        port: *mut shoopdaloop_audio_port_t,
    );
}
extern "C" {
    pub fn connect_midi_input(
        channel: *mut shoopdaloop_loop_midi_channel_t,
        port: *mut shoopdaloop_midi_port_t,
    );
}
extern "C" {
    pub fn disconnect_audio_outputs(channel: *mut shoopdaloop_loop_audio_channel_t);
}
extern "C" {
    pub fn disconnect_midi_outputs(channel: *mut shoopdaloop_loop_midi_channel_t);
}
extern "C" {
    pub fn disconnect_audio_output(
        channel: *mut shoopdaloop_loop_audio_channel_t,
        port: *mut shoopdaloop_audio_port_t,
    );
}
